--- a/styling/pages/home.css
+++ b/styling/pages/home.css
@@ -312,73 +312,72 @@ body {
 }
 
 body {
-  background: linear-gradient(to bottom, #FFC01D, #FF7F31);
-  background-size: 100%;
-  background-repeat: no-repeat;
+  background-color: white;
+  margin-bottom: 0;
 }
-
-body:before {
-  content: "";
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: -1;
-  background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.2), #F95A8A 80%);
-}
-
-body {
+body main {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-body .tagline {
-  color: black;
-  padding: 10%;
-  text-align: center;
-  width: 80%;
-}
-body .tagline p {
+  flex-direction: column;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 5%;
   padding-bottom: 5%;
 }
-body .meet-btn {
-  background-color: #F95A8A;
+body main .hero {
+  background: linear-gradient(to right bottom, #FF7080, #FF7F31);
+  background-size: 100%;
+  color: black;
+  padding: 2%;
+  text-align: center;
+}
+body main .hero .meet {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+body main .hero .meet .meet-btn {
+  background-color: #FF7080;
   border: 1px solid black;
   border-radius: 5px;
   font-family: "Raleway", sans-serif;
   height: 2.2rem;
+  margin-top: 2%;
+  margin-bottom: 5%;
 }
-body .meet-btn a {
+body main .hero .meet .meet-btn a {
   text-decoration: none;
   color: black;
 }
-body .meet-btn:hover {
+body main .hero .meet .meet-btn:hover {
   background-color: #FF7F31;
 }
-body .meet-btn:hover a {
+body main .hero .meet .meet-btn:hover a {
   text-decoration: none;
 }
-body .cafe-pic {
+body main .cafe-pic {
+  background-color: white;
   display: flex;
-  justify-content: center;
-}
-body .cafe-pic img {
-  padding: 10%;
-  width: 80%;
-  height: auto;
+  flex-direction: column;
+  color: black;
+  text-align: center;
+  margin-top: 10%;
 }
 @media screen and (min-width: 1024px) {
-  body main .tagline h2 {
-    font-size: 2.1rem;
+  body main {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    flex: 1 1 auto;
   }
-  body main .tagline p {
-    font-size: 1.1rem;
-    line-height: 1.5rem;
+  body main .hero {
+    width: 100%;
+    text-align: center;
   }
-  body main .meet-btn {
-    height: 2.5rem;
+  body main .cafe-pic {
+    padding-right: 5%;
   }
-  body main .meet-btn a {
-    font-size: 1rem;
+  body main .cafe-pic img {
+    height: auto;
+    width: 100%;
   }
 }/*# sourceMappingURL=home.css.map */
