--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -1,92 +1,176 @@
 @import "./index";
 
-// Gradient background:
-body {	
-	background: linear-gradient(to bottom, $yellow, $orange);
-	background-size: 100%;
-	background-repeat: no-repeat;
-}
-
-body:before{
-	content:'';
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	width: 100%;
-	z-index: -1;
-	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), $pink 80%);
-}
-
-
 body {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  background-color: white;
+  margin-bottom: 0;
 
-  .tagline {
-    color: black;
-    padding: 10%;
-    text-align: center;
-    width: 80%;
-
-    p {
-      padding-bottom: 5%;
-    }
-  }
-
-  // button through to meet me page
-  .meet-btn {
-    background-color: $pink;
-    border: 1px solid black;
-    border-radius: 5px;
-    font-family: "Raleway", sans-serif;
-    height: 2.2rem;
-
-    a {
-      text-decoration: none;
+  main {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    
+    .hero {
+      background: linear-gradient(to right bottom, $peach, $orange);
+	    background-size: 100%;
       color: black;
-    }
+      padding: 2%;
+      text-align: center;
 
-    &:hover {
-      background-color: $orange;
+      // button through to meet me page
+      .meet {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+  
+      .meet-btn {
+        background-color: $peach;
+        border: 1px solid black;
+        border-radius: 5px;
+        font-family: "Raleway", sans-serif;
+        height: 2.2rem;
+        margin-top: 2%;
+        margin-bottom: 5%;
 
-      a {
-        text-decoration: none;
+        a {
+          text-decoration: none;
+          color: black;
+        }
+
+        &:hover {
+          background-color: $orange;
+          a {
+            text-decoration: none;
+          }
+        }
       }
     }
-  }
+    }
 
-  .cafe-pic {
-    display: flex;
-    justify-content: center;
-
-    img {
-      padding: 10%;
-      width: 80%;
-      height: auto;
+    .cafe-pic {
+      background-color: white;
+      display: flex;
+      flex-direction: column;
+      color: black;
+      text-align: center;
+      margin-top: 10%;
     }
   }
 
   // for desktop view
   @media screen and (min-width: $large) {
     main {
-      
-      .tagline h2 {
-        font-size: 2.1rem;
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+      flex: 1 1 auto;
+
+      .hero {
+        width: 100%;
+        text-align: center;
       }
-  
-      .tagline p {
-        font-size: 1.1rem;
-        line-height: 1.5rem;
-      }
-  
-      .meet-btn {
-        height: 2.5rem;
-  
-        a {
-          font-size: 1rem;
+
+      .cafe-pic {
+      padding-right: 5%;
+        img {
+          height: auto;
+          width: 100%;
         }
       }
     }
   }
 }
+
+
+// // Gradient background:
+// body {	
+// 	background: linear-gradient(to bottom, $yellow, $orange);
+// 	background-size: 100%;
+// 	background-repeat: no-repeat;
+// }
+
+// body:before{
+// 	content:'';
+// 	position: fixed;
+// 	top: 0;
+// 	bottom: 0;
+// 	width: 100%;
+// 	z-index: -1;
+// 	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), $pink 80%);
+// }
+
+
+// body {
+//   display: flex;
+//   flex-wrap: wrap;
+//   justify-content: center;
+
+//   .tagline {
+//     color: black;
+//     padding: 10%;
+//     text-align: center;
+//     width: 80%;
+
+//     p {
+//       padding-bottom: 5%;
+//     }
+//   }
+
+//   // button through to meet me page
+//   .meet-btn {
+//     background-color: $pink;
+//     border: 1px solid black;
+//     border-radius: 5px;
+//     font-family: "Raleway", sans-serif;
+//     height: 2.2rem;
+
+//     a {
+//       text-decoration: none;
+//       color: black;
+//     }
+
+//     &:hover {
+//       background-color: $orange;
+
+//       a {
+//         text-decoration: none;
+//       }
+//     }
+//   }
+
+//   .cafe-pic {
+//     display: flex;
+//     justify-content: center;
+
+//     img {
+//       padding: 10%;
+//       width: 80%;
+//       height: auto;
+//     }
+//   }
+
+//   // for desktop view
+//   @media screen and (min-width: $large) {
+//     main {
+      
+//       .tagline h2 {
+//         font-size: 2.1rem;
+//       }
+  
+//       .tagline p {
+//         font-size: 1.1rem;
+//         line-height: 1.5rem;
+//       }
+  
+//       .meet-btn {
+//         height: 2.5rem;
+  
+//         a {
+//           font-size: 1rem;
+//         }
+//       }
+//     }
+//   }
+// }
