--- a/styling/pages/meet.scss
+++ b/styling/pages/meet.scss
@@ -2,7 +2,7 @@
 
 // Gradient background:
 body {	
-	background: linear-gradient(to bottom, $light-yellow, $peach, $light-orange, $pink, $orange, $light-pink2);
+	background: linear-gradient(to bottom, $yellow, $orange);
 	background-size: 100%;
 	background-repeat: no-repeat;
 
@@ -194,5 +194,5 @@ body:before{
 	bottom: 0;
 	width: 100%;
 	z-index: -1;
-	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), $yellow 85%);
+	background: linear-gradient(to right bottom, rgba(255,255,255,0.2), $pink 90%);
 }
