--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -65,10 +65,12 @@ body {
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
-      flex: 1 1 auto;
+      // flex: 1 1 auto;
 
       .hero {
         width: 100%;
+        height: 100%;
+        padding: 6%;
         text-align: center;
       }
 
