--- a/styling/pages/home.scss
+++ b/styling/pages/home.scss
@@ -65,7 +65,7 @@ body {
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
-      // flex: 1 1 auto;
+      padding-top: 3%;
 
       .hero {
         width: 100%;
