troubleshooting font display

--- a/styling/defaults/_text.scss
+++ b/styling/defaults/_text.scss
@@ -1,9 +1,9 @@
 h1 {
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Abril Fatface', serif;
 }
 
 h2 {
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Abril Fatface', serif;
     text-align: center;
 }
 
@@ -24,7 +24,7 @@ ul {
 
 // header
 .name {
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Abril Fatface', serif;
 }
 
 .nav-items {
@@ -33,7 +33,7 @@ ul {
 
 // footer 
 .signature {
-    font-family: 'Abril Fatface', cursive;
+    font-family: 'Abril Fatface', serif;
 }
 
 .webdev {
