--- a/styling/pages/home.css
+++ b/styling/pages/home.css
@@ -1,9 +1,9 @@
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -20,7 +20,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -28,7 +28,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
@@ -52,11 +52,11 @@ label {
 }
 
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -73,7 +73,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -81,7 +81,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
@@ -163,11 +163,11 @@ header .nav-items a:hover {
   }
 }
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -184,7 +184,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -192,7 +192,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
