--- a/styling/pages/enquiry.css
+++ b/styling/pages/enquiry.css
@@ -1,9 +1,9 @@
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -20,7 +20,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -28,7 +28,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
@@ -140,11 +140,11 @@ footer .socials a i {
   }
 }
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -161,7 +161,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -169,7 +169,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
@@ -251,11 +251,11 @@ header .nav-items a:hover {
   }
 }
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -272,7 +272,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -280,7 +280,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
@@ -304,11 +304,11 @@ label {
 }
 
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -325,7 +325,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -333,7 +333,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
@@ -415,11 +415,11 @@ header .nav-items a:hover {
   }
 }
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 h2 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
   text-align: center;
 }
 
@@ -436,7 +436,7 @@ ul li {
 }
 
 .name {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .nav-items {
@@ -444,7 +444,7 @@ ul li {
 }
 
 .signature {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", serif;
 }
 
 .webdev {
