--- a/styling/components/_footer.scss
+++ b/styling/components/_footer.scss
@@ -3,108 +3,134 @@
 @import "../defaults/text";
 
 footer {
-  background-color: $pink;
-  color: white;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  justify-content: center;
+	background-color: $pink;
+	color: white;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	justify-content: center;
 
-  .signature {
-    display: flex;
-    justify-content: center;
+	.signature {
+		display: flex;
+		justify-content: center;
 
-    img {
-      margin-bottom: -2%;
-      width: 40%;
-      height: auto;
-    }
-  }
+		img {
+			margin-bottom: -2%;
+			width: 40%;
+			height: auto;
+		}
+	}
 
-  .socials a i {
-    text-decoration: none;
-    color: white;
-    padding-left: 2%;
-    padding-right: 2%;
-
-  }
+	.socials a i {
+		text-decoration: none;
+		color: white;
+		padding-left: 2%;
+		padding-right: 2%;
+	}
 }
 
 // for mobile view
 @media screen and (max-width: $medium) {
-  .signature {
-    font-size: 24px;
-    display: flex;
-    justify-content: center;
-  }
+	.signature {
+		font-size: 24px;
+		display: flex;
+		justify-content: center;
+	}
 
-  .webdev {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
-  }
+	.webdev {
+		a {
+			font-size: 12px;
+			display: flex;
+			justify-content: center;
+			color: white;
+			text-decoration: none;
+			padding-bottom: 1%;
 
-  .socials {
-    font-size: 12px;
-    display: flex;
-    justify-content: center;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
 
-    a {
-      padding-left: 2%;
-      padding-right: 2%;
-    }
-  }
+	.socials {
+		font-size: 12px;
+		display: flex;
+		justify-content: center;
+
+		a {
+			padding-left: 2%;
+			padding-right: 2%;
+		}
+	}
 }
 
 // for tablet view
 @media screen and (min-width: $medium) {
-  .signature {
-    font-size: 32px;
-    display: flex;
-    justify-content: center;
-  }
+	.signature {
+		font-size: 32px;
+		display: flex;
+		justify-content: center;
+	}
 
-  .webdev {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
-  }
+	.webdev {
+		a {
+			font-size: 14px;
+			display: flex;
+			justify-content: center;
+			color: white;
+			text-decoration: none;
+			padding-bottom: 1%;
 
-  .socials {
-    font-size: 14px;
-    display: flex;
-    justify-content: center;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
 
-    a {
-      padding-left: 2%;
-      padding-right: 2%;
-    }
-  }
+	.socials {
+		font-size: 14px;
+		display: flex;
+		justify-content: center;
+
+		a {
+			padding-left: 2%;
+			padding-right: 2%;
+		}
+	}
 }
 
 // for desktop view
 @media screen and (min-width: $large) {
-  .signature {
-    font-size: 36px;
-    display: flex;
-    justify-content: center;
-  }
+	.signature {
+		font-size: 36px;
+		display: flex;
+		justify-content: center;
+	}
 
-  .webdev {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-  }
+	.webdev {
+		a {
+			font-size: 16px;
+			display: flex;
+			justify-content: center;
+			color: white;
+			text-decoration: none;
+			padding-bottom: 1%;
 
-  .socials {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
 
-    a i {
-      padding-left: 2%;
-      padding-right: 2%;
-    }
-  }
+	.socials {
+		font-size: 16px;
+		display: flex;
+		justify-content: center;
+
+		a i {
+			padding-left: 2%;
+			padding-right: 2%;
+		}
+	}
 }
