--- a/styling/pages/blog.css
+++ b/styling/pages/blog.css
@@ -82,10 +82,16 @@ footer .socials a i {
     display: flex;
     justify-content: center;
   }
-  .webdev {
+  .webdev a {
     font-size: 12px;
     display: flex;
     justify-content: center;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 1%;
+  }
+  .webdev a:hover {
+    text-decoration: underline;
   }
   .socials {
     font-size: 12px;
@@ -103,10 +109,16 @@ footer .socials a i {
     display: flex;
     justify-content: center;
   }
-  .webdev {
+  .webdev a {
     font-size: 14px;
     display: flex;
     justify-content: center;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 1%;
+  }
+  .webdev a:hover {
+    text-decoration: underline;
   }
   .socials {
     font-size: 14px;
@@ -124,10 +136,16 @@ footer .socials a i {
     display: flex;
     justify-content: center;
   }
-  .webdev {
+  .webdev a {
     font-size: 16px;
     display: flex;
     justify-content: center;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 1%;
+  }
+  .webdev a:hover {
+    text-decoration: underline;
   }
   .socials {
     font-size: 16px;
@@ -498,10 +516,16 @@ footer .socials a i {
     display: flex;
     justify-content: center;
   }
-  .webdev {
+  .webdev a {
     font-size: 12px;
     display: flex;
     justify-content: center;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 1%;
+  }
+  .webdev a:hover {
+    text-decoration: underline;
   }
   .socials {
     font-size: 12px;
@@ -519,10 +543,16 @@ footer .socials a i {
     display: flex;
     justify-content: center;
   }
-  .webdev {
+  .webdev a {
     font-size: 14px;
     display: flex;
     justify-content: center;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 1%;
+  }
+  .webdev a:hover {
+    text-decoration: underline;
   }
   .socials {
     font-size: 14px;
@@ -540,10 +570,16 @@ footer .socials a i {
     display: flex;
     justify-content: center;
   }
-  .webdev {
+  .webdev a {
     font-size: 16px;
     display: flex;
     justify-content: center;
+    color: white;
+    text-decoration: none;
+    padding-bottom: 1%;
+  }
+  .webdev a:hover {
+    text-decoration: underline;
   }
   .socials {
     font-size: 16px;
